--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "gh-pages": "^3.2.2",
+    "identicon": "^3.0.1",
+    "ipfs-http-client": "^33.1.1",
+    "node-fetch": "^2.6.1",
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
