--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gh-pages": "^3.2.2",
     "identicon": "^3.0.1",
     "ipfs-http-client": "^33.1.1",
+    "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
@@ -25,6 +26,8 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
+    "reactjs-media": "^1.5.1",
+    "simple-react-video-thumbnail": "0.0.7",
     "truffle": "5.0.5",
     "web3": "1.0.0-beta.55"
   },
@@ -42,5 +45,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-video-thumbnail": "^0.1.3"
+  }
 }
