--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
     "react": "16.8.4",
+    "react-animated-heart": "0.0.7-alpha.1",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
+    "react-flippy": "^1.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
