--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "react-animated-heart": "0.0.7-alpha.1",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
+    "react-dropzone": "^11.3.4",
+    "react-file-previewer": "^0.6.3",
     "react-flippy": "^1.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
+    "react-thumbnail": "^1.0.0",
     "reactjs-media": "^1.5.1",
     "simple-react-video-thumbnail": "0.0.7",
     "truffle": "5.0.5",
