--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "react-dropzone": "^11.3.4",
     "react-file-previewer": "^0.6.3",
     "react-flippy": "^1.1.0",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
+    "react-spinners": "^0.11.0",
+    "react-spinners-kit": "^1.9.1",
     "react-thumbnail": "^1.0.0",
     "reactjs-media": "^1.5.1",
     "simple-react-video-thumbnail": "0.0.7",
